feat: Allow file inclusions alongside exclusions