@@ -52,7 +52,6 @@ import java.text.SimpleDateFormat;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Queue;
 import java.util.stream.Collectors;
@@ -177,12 +176,13 @@ public final class ServiceCommand {
     }
   }
 
-  @CommandMethod("service|ser <name> copy|cp [template]")
+  @CommandMethod("service|ser <name> copy|cp")
   public void copyService(
     @NonNull CommandSource source,
     @NonNull @Argument(value = "name") Collection<ServiceInfoSnapshot> services,
-    @Nullable @Argument("template") ServiceTemplate template,
-    @Nullable @Flag("excludes") @Quoted String excludes
+    @Nullable @Flag("template") ServiceTemplate template,
+    @Nullable @Flag("excludes") @Quoted String excludes,
+    @Nullable @Flag("includes") @Quoted String includes
   ) {
     // associate all services with a template
     Collection<Pair<SpecificCloudServiceProvider, ServiceTemplate>> targets = services.stream()
@@ -205,11 +205,13 @@ public final class ServiceCommand {
       source.sendMessage(I18n.trans("command-service-copy-no-default-template"));
       return;
     }
-
+    var parsedExcludes = this.parseExcludes(excludes);
+    var parsedIncludes = this.parseExcludes(includes);
     for (var target : targets) {
       target.first().addServiceDeployment(ServiceDeployment.builder()
         .template(target.second())
-        .excludes(this.parseExcludes(excludes))
+        .excludes(parsedExcludes)
+        .includes(parsedIncludes)
         .build());
       target.first().removeAndExecuteDeployments();
       // send a message for each service we did copy the template of
@@ -419,9 +421,9 @@ public final class ServiceCommand {
 
   private @NonNull Collection<String> parseExcludes(@Nullable String excludes) {
     if (excludes == null) {
-      return Collections.emptyList();
+      return List.of();
     }
 
-    return Arrays.asList(excludes.split(";"));
+    return List.of(excludes.split(";"));
   }
 }
